--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 # nu
-nu-cli = { version = "0.92.2", path = "../nushell/crates/nu-cli" }
+nu-engine = { version = "0.92.2", path = "../nushell/crates/nu-engine" }
 nu-protocol = { version = "0.92.2", path = "../nushell/crates/nu-protocol" }
+nu-parser = { version = "0.92.2", path = "../nushell/crates/nu-parser" }
+nu-cmd-lang = { version = "0.92.2", path = "../nushell/crates/nu-cmd-lang" }
+nu-command = { version = "0.92.2", path = "../nushell/crates/nu-command" }
 
 # handle cli
 clap = { version = "4.5.4", features = ["derive"] }
@@ -20,5 +23,16 @@ tokio = { version = "1.37.0", features = ["full"] }
 # mainly for logging
 tracing = "0.1.40"
 
+# serialization
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
+
 # zeromq for communicating with jupyter
 zeromq = "0.3.5"
+
+# get directories to store data
+dirs = "5.0.1"
+
+# operate on static values
+static-toml = "1.2.0"
+const_format = "0.2.32"
