--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ clap = { version = "4.5.4", features = ["derive"] }
 # error handling
 thiserror = "1.0.58"
 
-# async runtime
+# async handling
 tokio = { version = "1.37.0", features = ["full"] }
+parking_lot = "0.12.1"
 
 # mainly for logging
 tracing = "0.1.40"
@@ -29,6 +30,7 @@ serde_json = "1.0.115"
 
 # zeromq for communicating with jupyter
 zeromq = "0.3.5"
+bytes = "1.6.0"
 
 # get directories to store data
 dirs = "5.0.1"
