--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,38 +3,30 @@ name = "nu-jupyter-kernel"
 version = "0.1.0"
 edition = "2021"
 
+[package.metadata.jupyter]
+protocol_version = "5.4"
+
 [dependencies]
-# nu
 nu-engine = { version = "0.92.2", path = "../nushell/crates/nu-engine" }
 nu-protocol = { version = "0.92.2", path = "../nushell/crates/nu-protocol" }
 nu-parser = { version = "0.92.2", path = "../nushell/crates/nu-parser" }
 nu-cmd-lang = { version = "0.92.2", path = "../nushell/crates/nu-cmd-lang" }
 nu-command = { version = "0.92.2", path = "../nushell/crates/nu-command" }
 
-# handle cli
 clap = { version = "4.5.4", features = ["derive"] }
-
-# error handling
 thiserror = "1.0.58"
-
-# async handling
 tokio = { version = "1.37.0", features = ["full"] }
 parking_lot = "0.12.1"
-
-# mainly for logging
 tracing = "0.1.40"
-
-# serialization
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
-
-# zeromq for communicating with jupyter
 zeromq = "0.3.5"
 bytes = "1.6.0"
-
-# get directories to store data
+uuid = "1.8.0"
+chrono = "0.4.38"
 dirs = "5.0.1"
-
-# operate on static values
 static-toml = "1.2.0"
 const_format = "0.2.32"
+hmac = "0.12.1"
+sha2 = "0.10.8"
+hex = "0.4.3"
