added mime_guess as dep

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ hmac = "0.12.1"
 sha2 = "0.10.8"
 hex = "0.4.3"
 mime = "0.3.17"
+mime_guess = "2.0.4"
 zmq = "0.10.0"
 derive_more = "0.99.17"
 miette = "7.2.0"
