--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,6 @@ mime = "0.3.17"
 mime_guess = "2.0.4"
 zmq = "0.10.0"
 derive_more = "0.99.17"
-miette = "7.2.0"
+miette = { version = "7.2.0", features = ["fancy"] }
 atomic_enum = "0.3.0"
 parking_lot = "0.12.2"
