starte heavily redefining data types

--- a/crates/nu_plugin_plotters/Cargo.toml
+++ b/crates/nu_plugin_plotters/Cargo.toml
@@ -13,6 +13,7 @@ default = ["nu-plugin"]
 # nu
 nu-plugin = { version = "0.96", optional = true }
 nu-protocol = { version = "0.96" }
+nu-engine = { version = "0.96" }
 
 # plotting
 plotters = "0.3.6"
