made nu-plugin a standard dependency, will eventually get tree-shaked anyway

--- a/crates/nu_plugin_plotters/Cargo.toml
+++ b/crates/nu_plugin_plotters/Cargo.toml
@@ -6,12 +6,9 @@ repository.workspace = true
 license.workspace = true
 publish = false
 
-[features]
-default = ["nu-plugin"]
-
 [dependencies]
 # nu
-nu-plugin = { version = "0.96", optional = true }
+nu-plugin = { version = "0.96" }
 nu-protocol = { version = "0.96" }
 nu-engine = { version = "0.96" }
 
