--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,14 +32,14 @@ path = "crates/nu_plugin_plotters"
 optional = true
 
 [workspace.dependencies]
-nu-cmd-extra = { version = "0.97" }
-nu-cmd-lang = { version = "0.97" }
-nu-cmd-plugin = { version = "0.97" }
-nu-command = { version = "0.97", features = ["plugin"] }
-nu-engine = { version = "0.97" }
-nu-parser = { version = "0.97", features = ["plugin"] }
-nu-protocol = { version = "0.97", features = ["plugin"] }
-nu-plugin = { version = "0.97" }
+nu-cmd-extra = { git = "https://github.com/nushell/nushell.git" }
+nu-cmd-lang = { git = "https://github.com/nushell/nushell.git" }
+nu-cmd-plugin = { git = "https://github.com/nushell/nushell.git" }
+nu-command = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
+nu-engine = { git = "https://github.com/nushell/nushell.git" }
+nu-parser = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
+nu-protocol = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
+nu-plugin = { git = "https://github.com/nushell/nushell.git" }
 
 [dependencies]
 # nu
