--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,22 +24,47 @@ plotting = ["nu-plotters"]
 [workspace]
 members = ["crates/nu_plugin_plotters"]
 
+[workspace.dependencies.nu-cmd-extra]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
+[workspace.dependencies.nu-cmd-lang]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
+[workspace.dependencies.nu-cmd-plugin]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
+[workspace.dependencies.nu-command]
+git = "https://github.com/nushell/nushell.git"
+features = ["plugin"]
+version = "0.97.2"
+
+[workspace.dependencies.nu-engine]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
+[workspace.dependencies.nu-parser]
+git = "https://github.com/nushell/nushell.git"
+features = ["plugin"]
+version = "0.97.2"
+
+[workspace.dependencies.nu-protocol]
+git = "https://github.com/nushell/nushell.git"
+features = ["plugin"]
+version = "0.97.2"
+
+[workspace.dependencies.nu-plugin]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
 # plotting
 [dependencies.nu-plotters]
 package = "nu_plugin_plotters"
 version = "0.1.0-wip"
 path = "crates/nu_plugin_plotters"
 optional = true
-
-[workspace.dependencies]
-nu-cmd-extra = { git = "https://github.com/nushell/nushell.git" }
-nu-cmd-lang = { git = "https://github.com/nushell/nushell.git" }
-nu-cmd-plugin = { git = "https://github.com/nushell/nushell.git" }
-nu-command = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
-nu-engine = { git = "https://github.com/nushell/nushell.git" }
-nu-parser = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
-nu-protocol = { git = "https://github.com/nushell/nushell.git", features = ["plugin"] }
-nu-plugin = { git = "https://github.com/nushell/nushell.git" }
 
 [dependencies]
 # nu
