added nuon to deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,10 @@ version = "0.97.2"
 git = "https://github.com/nushell/nushell.git"
 version = "0.97.2"
 
+[workspace.dependencies.nuon]
+git = "https://github.com/nushell/nushell.git"
+version = "0.97.2"
+
 # plotting
 [dependencies.nu-plotters]
 package = "nu_plugin_plotters"
