--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
     env:
       RUSTFLAGS: "-D warnings"
 
@@ -21,9 +25,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: stable
+        run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       
       - name: Check nu_plugin_plotters
         run: cargo check -p nu_plugin_plotters 
