--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,27 +11,45 @@ on:
       - dev
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain:
-          - stable
+        crates:
+          - nu_plugin_plotters
+          - nu-jupyter-kernerl
     env:
       RUSTFLAGS: "-D warnings"
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - run: rustup update
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - run: cargo check -p ${{ matrix.crates }} 
 
-      - name: Set up Rust
-        run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      
-      - name: Check nu_plugin_plotters
-        run: cargo check -p nu_plugin_plotters 
-
-      - name: Check nu-jupyter-kernel
-        run: cargo check -p nu-jupyter-kernel
-
-      - name: Doc
-        run: cargo doc
+  doc:
+    runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: "-D warnings"
+    
+    steps:
+      - uses: actions/checkout@v3
+      - run: rustup update
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - run: cargo doc --workspace 
