--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,44 +24,16 @@ plotting = ["nu-plotters"]
 [workspace]
 members = ["crates/nu_plugin_plotters"]
 
-[workspace.dependencies.nu-cmd-extra]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
-
-[workspace.dependencies.nu-cmd-lang]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
-
-[workspace.dependencies.nu-cmd-plugin]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
-
-[workspace.dependencies.nu-command]
-git = "https://github.com/nushell/nushell.git"
-features = ["plugin"]
-version = "0.97.2"
-
-[workspace.dependencies.nu-engine]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
-
-[workspace.dependencies.nu-parser]
-git = "https://github.com/nushell/nushell.git"
-features = ["plugin"]
-version = "0.97.2"
-
-[workspace.dependencies.nu-protocol]
-git = "https://github.com/nushell/nushell.git"
-features = ["plugin"]
-version = "0.97.2"
-
-[workspace.dependencies.nu-plugin]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
-
-[workspace.dependencies.nuon]
-git = "https://github.com/nushell/nushell.git"
-version = "0.97.2"
+[workspace.dependencies]
+nu-cmd-extra = "0.98"
+nu-cmd-lang = "0.98"
+nu-cmd-plugin = "0.98"
+nu-command = { version = "0.98", features = ["plugin"] }
+nu-engine = { version = "0.98"}
+nu-parser = { version = "0.98", features = ["plugin"] }
+nu-protocol = { version = "0.98", features = ["plugin"] }
+nu-plugin = "0.98"
+nuon = "0.98"
 
 # plotting
 [dependencies.nu-plotters]
