--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nu-jupyter-kernel"
-version = "0.1.4+0.99.0"
+version = "0.1.5+0.100.0"
 edition.workspace = true
 description = "A jupyter raw kernel for nu"
 repository.workspace = true
@@ -24,15 +24,15 @@ plotting = ["nu-plotters"]
 members = ["crates/nu_plugin_plotters"]
 
 [workspace.dependencies]
-nu-cmd-extra = "0.99.0"
-nu-cmd-lang = "0.99.0"
-nu-cmd-plugin = "0.99.0"
-nu-command = { version = "0.99.0", features = ["plugin"] }
-nu-engine = { version = "0.99.0"}
-nu-parser = { version = "0.99.0", features = ["plugin"] }
-nu-protocol = { version = "0.99.0", features = ["plugin"] }
-nu-plugin = "0.99.0"
-nuon = "0.99.0"
+nu-cmd-extra = "0.100.0"
+nu-cmd-lang = "0.100.0"
+nu-cmd-plugin = "0.100.0"
+nu-command = { version = "0.100.0", features = ["plugin"] }
+nu-engine = { version = "0.100.0" }
+nu-parser = { version = "0.100.0", features = ["plugin"] }
+nu-protocol = { version = "0.100.0", features = ["plugin"] }
+nu-plugin = "0.100.0"
+nuon = "0.100.0"
 
 # plotting
 [dependencies.nu-plotters]
@@ -47,7 +47,7 @@ nu-cmd-extra.workspace = true
 nu-cmd-lang.workspace = true
 nu-cmd-plugin.workspace = true
 nu-command.workspace = true
-nu-engine.version = "0.99.0" # cannot publish if this inherits from workspace
+nu-engine.version = "0.100.0"  # cannot publish if this inherits from workspace
 nu-parser.workspace = true
 nu-protocol.workspace = true
 
@@ -66,11 +66,11 @@ chrono = "0.4.38"
 
 # Derive Macros
 clap = { version = "4.5.4", features = ["derive"] }
-derive_more = "0.99.17"
+derive_more = { version = "1.0.0", features = ["full"] }
 strum = { version = "0.26", features = ["derive"] }
 
 # Error Handling
-thiserror = "1.0.58"
+thiserror = "2.0.3"
 miette = { version = "7.2.0", features = ["fancy"] }
 
 # Filesystem
