--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: continous-integration
+name: continuous-integration
 
 on:
   push:
@@ -29,6 +29,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+      - uses: tecolicom/actions-use-apt-tools@v1
+        with:
+          tools: libfontconfig1-dev
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rustflags: $RUSTFLAGS
@@ -39,6 +42,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: tecolicom/actions-use-apt-tools@v1
+        with:
+          tools: libfontconfig1-dev
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rustflags: $RUSTFLAGS
