--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
-      - uses: tecolicom/actions-use-apt-tools@v1
+      - uses: ConorMacBride/install-package@v1
         with:
-          tools: libfontconfig1-dev
+          apt: libfontconfig1-dev
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rustflags: $RUSTFLAGS
@@ -43,9 +43,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: tecolicom/actions-use-apt-tools@v1
+      - uses: ConorMacBride/install-package@v1
         with:
-          tools: libfontconfig1-dev
+          apt: libfontconfig1-dev
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rustflags: $RUSTFLAGS
