--- a/crates/nu_plugin_plotters/Cargo.toml
+++ b/crates/nu_plugin_plotters/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nu_plugin_plotters"
 description = "A nushell plugin for for plotting charts"
-version = "0.1.5+0.103.0"
+version = "0.1.6+0.104.0"
 edition.workspace = true
 repository.workspace = true
 license.workspace = true
@@ -14,6 +14,9 @@ nu-engine.workspace = true
 
 # plotting
 plotters = "0.3.6"
+
+# dates
+chrono = "0.4"
 
 # serialization, needed for custom values
 serde = { version = "1", features = ["derive"] }
