--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,13 +28,13 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            format: .zip
+            format: .tar.gz
           - os: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
             format: .tar.gz
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            format: .tar.gz
+            format: .zip
     env:
       ARTIFACT_NAME: ${{inputs.package}}-${{ matrix.target }}${{ matrix.format }}
     
@@ -46,6 +46,9 @@ jobs:
 
       - name: Extract ouch
         run: tar -xf ouch-*
+
+      - name: Move ouch
+        run: mv ouch-*/ouch* ./
 
       - name: Check ouch Version
         run: ./ouch --version
