try to use bash for windows workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract ouch
+        shell: bash
         run: tar -xf ouch-*
 
       - name: Move ouch
