--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,4 +63,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
+          name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.ARTIFACT_NAME }}
