try to update Rust toolchain

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,11 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt update -y
+          sudo apt upgrade -y
           sudo apt install -y pkg-config libfreetype6-dev libfontconfig1-dev
+
+      - name: Update Rust Toolchain
+        run: rustup up
 
       - name: Checkout
         uses: actions/checkout@v4
