--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,18 +28,12 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            format: .tar.gz
-            bin-ext: ""
           - os: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
-            format: .tar.gz
-            bin-ext: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            format: .zip
-            bin-ext: ".exe"
     env:
-      ARTIFACT_NAME: ${{inputs.package}}-${{ matrix.target }}${{ matrix.format }}
+      ARTIFACT_NAME: ${{inputs.package}}-${{ matrix.target }}.zip
     
     steps:
       - name: Install System Deps
