--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,3 +63,44 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.ARTIFACT_NAME }}
+
+  draft:
+    name: Draft Release
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v5
+        with:
+          path: ./dist
+          merge-multiple: true
+
+      - name: Checkout Cargo.lock
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: Cargo.lock
+          sparse-checkout-cone-mode: false
+
+      - name: Setup Nushell
+        uses: hustcer/setup-nu@v3
+        with:
+          version: "0.107.0"
+
+      - name: Get Version
+        id: version
+        shell: nu {0}
+        run: | 
+          open Cargo.lock 
+          | from toml 
+          | get package 
+          | where name == "${{ inputs.package }}" 
+          | get version.0
+          | "version=" + $in
+          | save $env.GITHUB_OUTPUT -ra
+
+      - name: Draft Release
+        run: gh release create --draft "$TAG" ./dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ inputs.package }}/v${{ steps.version.outputs.version }}
