try to use nu to list all files for gh

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ permissions:
 
 env:
   PACKAGE: ${{ inputs.package }}
-  OUCH_VERSION: "0.6.1"
+  NU_VERSION: "0.107.0"
 
 jobs:
   build:
@@ -88,7 +88,7 @@ jobs:
       - name: Setup Nushell
         uses: hustcer/setup-nu@v3
         with:
-          version: "0.107.0"
+          version: ${{ env.NU_VERSION }}
 
       - name: Get Version
         id: version
@@ -103,7 +103,8 @@ jobs:
           | save $env.GITHUB_OUTPUT -ra
 
       - name: Draft Release
-        run: gh release create --draft "$TAG" dist/**/*
+        shell: nu {0}
+        run: ls dist | gh release create --draft $env.TAG ...$in.name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG: ${{ inputs.package }}/v${{ steps.version.outputs.version }}
