--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "nu-jupyter-kernel-test"
+name = "nu-jupyter-tools"
 version = "0.0.0"
-description = "Tests for the nu-jupyter-kernel"
+description = "Tools and tests for working with the nu-jupyter-kernel"
 requires-python = ">=3.12"
 dependencies = [
-    "jupyter-client>=8.6.2",
-    "pytest-timeout>=2.3.1",
-    "pytest>=8.3.3",
+    "jupyter-client>=8.6.3",
+    "pytest-timeout>=2.4.0",
+    "pytest>=9.0.1",
 ]
 
 [tool.pytest.ini_options]
